# rl-geo-auditor

./: .dockerignore  Dockerfile  HF_SPACE_DEPLOY.md  README.md  README_PROGRESS.md  analyze_policies.py  compare_policies.py  draft_real_batch.py  final_real_evaluation.py  inference.py  openenv.yaml  pyproject.toml  train_q_policy.py
artifacts/: comparison_report.json  final_real_evaluation_report.json  keep_light_review_finalized.json  policy_analysis.json  q_policy.json  real_dataset_final_summary.json  real_dataset_finalized_49.json  real_dataset_replacements_11.json  real_dataset_tracker_google_sheets.csv  real_easy_batch_01_draft.json  real_easy_batch_02_draft.json  real_hard_batch_01_draft.json  real_hard_batch_02_draft.json  real_medium_batch_01_draft.json  real_medium_batch_01_review.md  real_medium_batch_01_reviewed.json  real_medium_batch_01_status.md  real_medium_batch_02_draft.json  review_heavy_finalized.json  round2_comparison.json  training_report.json
data/: task1_easy.json  task2_medium.json  task3_hard.json
docs/: HF_MINI_BLOG.md  IMPORTANT_RL_ENV_HACKATHON_STRATEGY.md  PROJECT_LEARNING_GUIDE.md  REAL_DATASET_COLLECTION.md  REAL_MEDIUM_BATCH_01.md  ROUND2_CHECKLIST_AND_RULES.md  ROUND2_DEFAULT_DECISIONS.md  ROUND2_EXECUTION_SPEC.md  ROUND2_PREP_QUESTIONS.md  ROUND2_PROBLEM_STATEMENT.md  ROUND2_TRAINING_NOTEBOOK_PLAN.md  ROUND2_TRAINING_TARGET.md  ROUND2_WRITEUP.md  SELF_ASSESSMENT_QUIZ.md
geo_audit_env.egg-info/: PKG-INFO  SOURCES.txt
real_batches/: easy_batch_01_seed.json  easy_batch_02_seed.json  hard_batch_01_seed.json  hard_batch_02_seed.json  (+2 more)
(+20 files in other folders)
